// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize bodybox block 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "test",
              },
            ],
          },
        ],
        "type": "bodybox",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserialize footnote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "",
              },
            ],
          },
          Object {
            "data": Object {
              "authors": Array [
                "Jony Ive",
              ],
              "edition": "2",
              "publisher": "Apple",
              "resource": "footnote",
              "title": "Apple Watch",
              "type": "",
              "year": "2015",
            },
            "isVoid": false,
            "kind": "inline",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "#",
                  },
                ],
              },
            ],
            "type": "footnote",
          },
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "",
              },
            ],
          },
          Object {
            "data": Object {
              "authors": Array [
                "Steve Jobs",
                "Jony Ive",
              ],
              "edition": "1",
              "publisher": "Apple",
              "resource": "footnote",
              "title": "iPhone",
              "type": "",
              "year": "2007",
            },
            "isVoid": false,
            "kind": "inline",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "#",
                  },
                ],
              },
            ],
            "type": "footnote",
          },
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing a br 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "br",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing a normal div block 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "A paragraph",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "div",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing a quote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "This quote should be both smart and wise",
              },
            ],
          },
        ],
        "type": "quote",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing a section 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Paragraph text",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "section",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing alphabetical list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {
          "type": "letters",
        },
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 1",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 2",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 3",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "letter-list",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing any heading becomes heading-two 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 1",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 2",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 3",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 4",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 5",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 6",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing any heading should result in heading-two 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "Heading 1",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing any heading should result in heading-two 2`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "Heading 2",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing any heading should result in heading-two 3`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "Heading 3",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing any heading should result in heading-two 4`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "Heading 4",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing any heading should result in heading-two 5`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "Heading 5",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing any heading should result in heading-two 6`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "Heading 6",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing bullet list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 1",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 2",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 3",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "bulleted-list",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing list with paragraph inside li elements 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "data": Object {},
                "isVoid": false,
                "kind": "block",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "ranges": Array [
                      Object {
                        "kind": "range",
                        "marks": Array [],
                        "text": "paragraph 1",
                      },
                    ],
                  },
                ],
                "type": "list-text",
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "data": Object {},
                "isVoid": false,
                "kind": "block",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "ranges": Array [
                      Object {
                        "kind": "range",
                        "marks": Array [],
                        "text": "paragraph 2",
                      },
                    ],
                  },
                ],
                "type": "list-text",
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "data": Object {},
                "isVoid": false,
                "kind": "block",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "ranges": Array [
                      Object {
                        "kind": "range",
                        "marks": Array [],
                        "text": "bold paragraph 3",
                      },
                    ],
                  },
                ],
                "type": "list-text",
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "bulleted-list",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing numbered list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 1",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 2",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Rad 3",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "numbered-list",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "data": Object {},
                "isVoid": false,
                "kind": "block",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "ranges": Array [
                      Object {
                        "kind": "range",
                        "marks": Array [],
                        "text": "column 1",
                      },
                    ],
                  },
                ],
                "type": "table-cell",
              },
              Object {
                "data": Object {},
                "isVoid": false,
                "kind": "block",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "ranges": Array [
                      Object {
                        "kind": "range",
                        "marks": Array [],
                        "text": "column 2",
                      },
                    ],
                  },
                ],
                "type": "table-cell",
              },
            ],
            "type": "table-row",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "data": Object {},
                "isVoid": false,
                "kind": "block",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "ranges": Array [
                      Object {
                        "kind": "range",
                        "marks": Array [],
                        "text": "column 1",
                      },
                    ],
                  },
                ],
                "type": "table-cell",
              },
              Object {
                "data": Object {},
                "isVoid": false,
                "kind": "block",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "ranges": Array [
                      Object {
                        "kind": "range",
                        "marks": Array [],
                        "text": "column 2",
                      },
                    ],
                  },
                ],
                "type": "table-cell",
              },
            ],
            "type": "table-row",
          },
        ],
        "type": "table",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`serialize bodybox block 1`] = `
<div
  className="c-bodybox"
>
  <p>
    test
  </p>
</div>
`;

exports[`serialize embed block 1`] = `
<embed
  data-caption="test"
/>
`;

exports[`serialize footnote 1`] = `
<embed
  data-authors="Jony Ive"
  data-edition="4"
  data-publisher="Apple"
  data-title="Apple Watch"
  data-type="product"
  data-year="2015"
/>
`;

exports[`serializing a normal div block 1`] = `"<div><p>A paragraph</p></div>"`;

exports[`serializing br 1`] = `"<br/>"`;

exports[`serializing bullet list 1`] = `"<ul><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ul>"`;

exports[`serializing heading-two 1`] = `"<h2>heading 2</h2>"`;

exports[`serializing letter list 1`] = `"<ol data-type=\\"letters\\"><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ol>"`;

exports[`serializing numbered list 1`] = `"<ol><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ol>"`;

exports[`serializing quote 1`] = `"<blockquote>This quote should be both smart and wise</blockquote>"`;

exports[`serializing section 1`] = `"<section><p>Paragraph text</p></section>"`;
